new build and gen scripts to enable smaller bundle sizes (tree shaking & rasters). see related issues/requests in upstream:
smucode/react-world-flags#3
smucode/react-world-flags#138
smucode/react-world-flags#378

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 node_modules
 npm-debug.log
 .DS_Store
+dist/*
+src/CountryFlags.mjs
+src/country.js
+src/profiles/*
+types/country-flags.d.ts
 src/svgs/*.svg-e*
+src/webp/**/*
+src/jpg/**/*
+src/png/**/*
